airbyte-deployments/declan/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbyte-sme-declan-v2
  namespace: airbyte-sme-declan-v2
  annotations:
    alb.ingress.kubernetes.io/group.name: "airbyte-shared-alb"

    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/subnets: subnet-03f37bc3bcdb87c93,subnet-0e6c4ea35fcfb48a0
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-1:705229835085:certificate/cc4ec467-8507-45c9-97f0-5453165da08d
spec:
  ingressClassName: alb
  rules:
    - host: declan-v2.solutions-architects.internal.airbyte.dev
      http:
        paths:
          - backend:
              service:
                name: airbyte-enterprise-airbyte-keycloak-svc
                port:
                  number: 8180
            path: /auth
            pathType: Prefix
          - backend:
              service:
                name: airbyte-enterprise-airbyte-connector-builder-server-svc
                port:
                  number: 80
            path: /api/v1/connector_builder/
            pathType: Prefix
          - backend:
              service:
                name: airbyte-enterprise-airbyte-server-svc
                port:
                  number: 8001
            path: /
            pathType: Prefix
